# mcp-cicd-agent

./: .env.example  .gitignore  README.md  USAGE.md  demo_mcp.py  demo_stop.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.txt
src/mcp_cicd/: __init__.py  __main__.py  exceptions.py  server.py
src/mcp_cicd/config/: settings.py
src/mcp_cicd/models/: deployment.py
src/mcp_cicd/tools/: docker_tools.py  health_tools.py  lifecycle_tools.py  repo_tools.py
src/mcp_cicd/utils/: docker_utils.py  git_utils.py  logging.py  state_manager.py  validation.py
tests/: conftest.py  test_mcp_server.py
tests/fixtures/simple-app/: Dockerfile  app.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_docker_utils.py  test_git_utils.py  test_settings.py  test_validation.py
