[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-cicd-agent"
version = "0.1.0"
description = "Production-grade MCP server for automated Docker CI/CD deployments"
authors = [{name = "Kratosvil", email = "kratosvil@github.com"}]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "docker", "cicd", "deployment", "automation", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.2.0,<2.0.0",
    "docker>=7.0.0,<8.0.0",
    "GitPython>=3.1.40,<4.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "structlog>=24.4.0,<26.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
    "black>=24.0.0,<25.0.0",
    "faker>=22.0.0,<23.0.0",
]

[project.scripts]
mcp-cicd = "mcp_cicd.server:main"

[project.urls]
Homepage = "https://github.com/kratosvil/mcp-cicd-agent"
Repository = "https://github.com/kratosvil/mcp-cicd-agent"
Issues = "https://github.com/kratosvil/mcp-cicd-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mcp_cicd --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
